--- a/src/Unik.Comments.API/appsettings.json
+++ b/src/Unik.Comments.API/appsettings.json
@@ -12,7 +12,7 @@
     "TenantId": "common",
     "ClientId": "f801a9e9-0256-4f7f-97a9-fd92bc39958f",
     "Domain": "bolaadb2cd.onmicrosoft.com",
-    "SignUpSignInPolicyId": "b2c_1a_signin",
+    "SignUpSignInPolicyId": "B2C_1A_SIGNIN_SIGNUP",
     "Audience": "63b2789e-90fd-48b0-86a0-ae9d5d405fec", // App reg of SPA
     "AllowWebApiToBeAuthorizedByACL": true // Allows no scope and roles in the JWT Token
   },
